--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ rbenv:
   - 2.5.3
 addons:
   postgresql: 9.6
+cache:
+  bundler: true
+before_install:
+- yes | gem update --system --force
+- gem install bundler
 script:
   - bundle exec rails db:{create,migrate} RAILS_ENV=test
   - bundle exec rspec
